--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,27 @@
+.chat {
+  display: flex;
+  flex-direction: column;
+  max-width: 48rem;
+}
+
+.message-ai-wrapper {
+  display: flex;
+  justify-content: flex-start;
+}
+
 .message-ai {
   background-color: #f1f0f0;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
   display: inline-block;
-  max-width: 80%;
+  max-width: 32rem;
   word-wrap: break-word;
+}
+
+.message-human-wrapper {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .message-human {
@@ -15,6 +31,6 @@
   padding: 10px;
   margin: 10px;
   display: inline-block;
-  max-width: 80%;
+  max-width: 32rem;
   word-wrap: break-word;
 }
